--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -6,6 +5,7 @@
         <title>{% block title %}{{ 'welcome' | trans }}{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -23,21 +23,27 @@
                     <a class="navbar-brand" href="{{ path('home') }}">{{ 'welcome' | trans }}</a>
                     <div class="collapse navbar-collapse justify-content-center">
                         <ul class="navbar-nav mx-3"> 
-                          <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_product_index') }}">{{ 'boutique' | trans }}</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_admin_products') }}">{{ 'produits' | trans }}</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_admin') }}">{{ 'utilisateurs' | trans }}</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_admin_orders') }}">{{ 'orders' | trans }}</a>
-                            </li>
-                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('admin_dashboard') }}">{{ 'dashboard' | trans }}</a>
-                            </li>
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('app_product_index') }}">{{ 'boutique' | trans }}</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('app_admin_products') }}">{{ 'produits' | trans }}</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('app_admin') }}">{{ 'utilisateurs' | trans }}</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('app_admin_orders') }}">{{ 'orders' | trans }}</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('admin_dashboard') }}">{{ 'dashboard' | trans }}</a>
+                                </li>
+                            {% elseif is_granted('ROLE_USER') %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('app_product_index') }}">{{ 'boutique' | trans }}</a>
+                                </li>
+                            {% endif %}
                         </ul>
                         {% if app.user %}
                             <div class="dropdown ms-auto">
@@ -58,4 +64,5 @@
             {% block body %}{% endblock %}
         </main>
     </body>
+    <script src="{{ asset('build/app.js') }}"></script>
 </html>
