--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -64,6 +64,8 @@
         <main class="container">
             {% block body %}{% endblock %}
         </main>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+            <script src="{{ asset('build/app.js') }}"></script>
+
     </body>
-    <script src="{{ asset('build/app.js') }}"></script>
 </html>
