--- a/templates/product_add/index.html.twig
+++ b/templates/product_add/index.html.twig
@@ -11,6 +11,11 @@
 			{{ form_errors(form.name) }}
 		</div>
 		<div class="mb-3">
+			{{ form_label(form.image_url, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.image_url, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.image_url) }}
+		</div>
+		<div class="mb-3">
 			{{ form_label(form.category, null, {'label_attr': {'class': 'form-label'}}) }}
 			{{ form_widget(form.category, {'attr': {'class': 'form-control'}}) }}
 			{{ form_errors(form.category) }}
