--- a/templates/product_edit/index.html.twig
+++ b/templates/product_edit/index.html.twig
@@ -12,7 +12,11 @@
 			{{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
 			{{ form_errors(form.name) }}
 		</div>
-
+		<div class="mb-3">
+			{{ form_label(form.image_url, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.image_url, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.image_url) }}
+		</div>
 		<div class="mb-3">
 			{{ form_label(form.price, null, {'label_attr': {'class': 'form-label'}}) }}
 			{{ form_widget(form.price, {'attr': {'class': 'form-control'}}) }}
